--- a/meeting/.classpath
+++ b/meeting/.classpath
@@ -6,8 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
-	<classpathentry kind="lib" path="lib/jProcesses-1.6.4.jar"/>
-	<classpathentry kind="lib" path="lib/WMI4Java-1.6.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/NETTY4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
