--- a/meeting/.classpath
+++ b/meeting/.classpath
@@ -6,6 +6,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/NETTY4"/>
+	<classpathentry kind="lib" path="lib/jackson-annotations-2.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-2.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-databind-2.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/netty-all-5.0.0.Alpha2.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.12.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
