--- a/meeting/.classpath
+++ b/meeting/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="lib/netty-all-5.0.0.Alpha2.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.12.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.12.jar"/>
+	<classpathentry kind="lib" path="lib/flatlaf-0.35.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
