UI developments in progress

--- a/meeting/.classpath
+++ b/meeting/.classpath
@@ -13,5 +13,7 @@
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.12.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.12.jar"/>
 	<classpathentry kind="lib" path="lib/flatlaf-0.35.jar"/>
+	<classpathentry kind="lib" path="/home/vissol/Soft/libraries/jdatepicker/jdatepicker-2.0.3.jar"/>
+	<classpathentry kind="lib" path="/home/vissol/Soft/libraries/LGoodDatePicker/LGoodDatePicker-10.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
